# wsc

./: README.md  stack.yaml  wsc.cabal
app/: Main.hs
src/Language/: Greyspace.hs  Whitespace.hs
src/Language/Greyspace/: Compiler.hs
src/Language/Whitespace/: Compiler.hs  Parser.hs
