name:                wsc
version:             0.1.0.0
synopsis:            A Whitespace compiler
-- description:
homepage:            https://github.com/ludvikgalois/wsc#readme
license:             BSD3
license-file:        LICENSE
author:              Robert 'Probie' Offner
maintainer:          ludvikgalois@gmail.com
copyright:           2017 Robert 'Probie' Offner
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Whitespace
                     , Language.Whitespace.Compiler
                     , Language.Whitespace.Parser
                     , Language.Greyspace
                     , Language.Greyspace.Compiler
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5,
                       lens == 4.15.1,
                       llvm-hs == 4.2.0,
                       llvm-hs-pure == 4.1.0.0,
                       mtl >= 2.2.1,
                       parsers == 0.12.5,
                       trifecta == 1.6.2.1
  default-language:    Haskell2010

executable wsc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , llvm-hs == 4.2.0
                     , optparse-applicative == 0.13.2.0
                     , process >= 1.4.3.0
                     , trifecta == 1.6.2.1
                     , wsc
  default-language:    Haskell2010

test-suite wsc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wsc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ludvikgalois/wsc
